# bitflags

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  bitflags_config.cmake.in  plot.py
benchmark/: CMakeLists.txt
benchmark/src/: CMakeLists.txt  bitflags_benchmark.cpp  bitset_benchmark.cpp  raw_bitflags_benchmark.cpp
include/bitflags/: bitflags.hpp
tests/: CMakeLists.txt
tests/src/: CMakeLists.txt  bitflags_test.cpp
